# dj-webinars

./: README.md
deliveroo/: .http  (+4 more)
deliveroo/wms-data-generator/: .gitignore  README.md  WMS.md  generate-and-sync.sh  generate.sh  pyproject.toml  run-queries.sh
deliveroo/wms-data-generator/.cursor/rules/: sql-data-generation.mdc
deliveroo/wms-data-generator/schema/: create-wms-schema.sql  wms-er-diagram-old.mmd  wms-er-diagram.mmd
deliveroo/wms-data-generator/src/: WMS.mmd  config.py  create-wms-schema.sql  create_file.py  generate_sql_inserts.py  queries.md  result_composite.py  run.py  wms-er-diagram.mmd
deliveroo/wms-data-generator/src/generators/: customers.py  employees.py  enums.py  locations.py  payments.py  storage_records_events.py  storage_requests_reservations.py  warehouse.py
deliveroo/wms-data-generator/src/generators/address/: address.py
deliveroo/wms-data-generator/src/generators/contractors/: __init__.py  contractors.py
deliveroo/wms-data-generator/src/generators/employees/: __init__.py  employees.py
deliveroo/wms-data-generator/src/generators/party/: party.py  party_role.py
deliveroo/wms-data-generator/src/generators/payments/: __init__.py  payments.py
deliveroo/wms-data-generator/src/generators/storage/: __init__.py  storage_records_events.py  storage_requests_reservations.py
deliveroo/wms-data-generator/src/generators/warehouse/: __init__.py  locations.py  warehouse.py
deliveroo/wms-data-generator/src/generators/warehouse_structure/: __init__.py  warehouse_structure.py
deliveroo/wms-data-generator/src/queries/: __init__.py
(+1193 files in other folders)
