[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-fake-generator"
version = "0.1.0"
description = "Generate SQL insert scripts with fake data"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.8"
dependencies = [
    "faker>=24.0.0",
    "numpy>=1.26.0"
]
